[package]
name = "encgit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
bincode = "1.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
ignore = "0.4"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2"
zip = { version = "2", features = ["deflate"] }
zeroize = "1.8.2"
